# comfyui-magic-clothing

./: .gitignore  README.md  __init__.py  attn_handler.py  attn_patch.py  comfy_support.py  diffusers_nodes.py  diffusers_warp_nodes.py  example.json  ipadapter.json  nodes.py  oms_diffusion_nodes.py  oms_support.py  pyproject.toml  utils.py
diffusers_magic_clothing/: MagicClothingDiffusionPipeline.py  attention_processor.py  garment_diffusion.py
oms/: OmsDiffusionPipeline.py  attention_processor.py  garment_diffusion.py
unet_config/: default_sd15.json
